--- a/PersonalFinanceAccounting.Application/MainWindow.xaml
+++ b/PersonalFinanceAccounting.Application/MainWindow.xaml
@@ -1,11 +1,20 @@
-﻿<Window x:Class="PersonalFinanceAccounting.Application.MainWindow"
+<Window x:Class="PersonalFinanceAccounting.GuiApplication.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:PersonalFinanceAccounting.Application"
+        xmlns:local="clr-namespace:PersonalFinanceAccounting.GuiApplication"
         mc:Ignorable="d"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+        TextElement.FontWeight="Regular"
+        TextElement.FontSize="13"
+        TextOptions.TextFormattingMode="Ideal"
+        TextOptions.TextRenderingMode="Auto"
+        Background="{DynamicResource MaterialDesignPaper}"
+        FontFamily="{DynamicResource MaterialDesignFont}"
         Title="MainWindow" Height="450" Width="800">
+    
     <Grid>
 
     </Grid>
