--- a/PersonalFinanceAccounting.GuiApplication/MainWindow.xaml
+++ b/PersonalFinanceAccounting.GuiApplication/MainWindow.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PersonalFinanceAccounting.GuiApplication"
+        xmlns:VM="clr-namespace:PersonalFinanceAccounting.GuiApplication.ViewModels"
         mc:Ignorable="d"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
@@ -14,6 +15,9 @@
         Background="{DynamicResource MaterialDesignPaper}"
         FontFamily="{DynamicResource MaterialDesignFont}"
         Title="Personal Finance" Height="450" Width="800">
+    <Window.DataContext>
+        <VM:MainWindowViewModel/>
+    </Window.DataContext>
     
     <Grid>
 
