--- a/PersonalFinanceAccounting.GuiApp/MainWindow.xaml
+++ b/PersonalFinanceAccounting.GuiApp/MainWindow.xaml
@@ -25,7 +25,51 @@
             <RowDefinition Height="{Binding TopPanelHeight}"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-       
 
+        <StackPanel Grid.Row="0" HorizontalAlignment="Center">
+            <StackPanel Orientation="Horizontal">
+                <Button Content="Добавить кошелёк" Margin="6,3,3,0" Command="{Binding CommandOpenCloseCreateWallet}" Cursor="Hand"/>
+                <Button Content="Добавить категорию доходов" Margin="3,3,3,0" Command="{Binding CommandOpenCloseCreateIncomeCategory}" Cursor="Hand"/>
+                <Button Content="Добавить категорию расходов" Margin="3,3,6,0" Command="{Binding CommandOpenCloseCreateExpenseCategory}" Cursor="Hand"/>
+            </StackPanel>
+
+            <StackPanel Visibility="{Binding CreateWallet.IsVisible}" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,0">
+                <TextBox Text="{Binding CreateWallet.Name, UpdateSourceTrigger=PropertyChanged}" Width="200" Margin="0,0,10,0"
+                    materialDesign:HintAssist.Hint="Название кошелька"
+                    materialDesign:HintAssist.IsFloating="True"
+                    materialDesign:TextFieldAssist.HasClearButton="True"/>
+                <TextBox Text="{Binding CreateWallet.Sum, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" Width="200" Margin="0,0,10,0"
+                    materialDesign:HintAssist.Hint="Начальная сумма"
+                    materialDesign:HintAssist.IsFloating="True"
+                    materialDesign:TextFieldAssist.HasClearButton="True"/>
+                <ComboBox ItemsSource="{Binding CreateWallet.Currencies}" SelectedItem="{Binding CreateWallet.SelectedCurrency}"
+                          materialDesign:HintAssist.Hint="Валюта"
+                          materialDesign:HintAssist.IsFloating="True"
+                          Width="80" Margin="0,0,10,0">
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Name}"/>
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                </ComboBox>
+                <Button Content="Добавить" Command="{Binding CommandCreateWallet}" Cursor="Hand"/>
+            </StackPanel>
+
+            <StackPanel Visibility="{Binding CreateIncomeCategory.IsVisible}" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,0">
+                <TextBox Text="{Binding CreateIncomeCategory.Name, UpdateSourceTrigger=PropertyChanged}" Width="200" Margin="0,0,10,0"
+                    materialDesign:HintAssist.Hint="Название категории дохода"
+                    materialDesign:HintAssist.IsFloating="True"
+                    materialDesign:TextFieldAssist.HasClearButton="True"/>
+                <Button Content="Добавить" Command="{Binding CommandCreateIncomeCategory}" Cursor="Hand"/>
+            </StackPanel>
+
+            <StackPanel Visibility="{Binding CreateExpenseCategory.IsVisible}" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,0">
+                <TextBox Text="{Binding CreateExpenseCategory.Name, UpdateSourceTrigger=PropertyChanged}" Width="200" Margin="0,0,10,0"
+                    materialDesign:HintAssist.Hint="Название категории расхода"
+                    materialDesign:HintAssist.IsFloating="True"
+                    materialDesign:TextFieldAssist.HasClearButton="True"/>
+                <Button Content="Добавить" Command="{Binding CommandCreateExpenseCategory}" Cursor="Hand"/>
+            </StackPanel>
+        </StackPanel>
     </Grid>
 </Window>
