Refactoring and updates!

--- a/PersonalFinanceAccounting.GuiApp/MainWindow.xaml
+++ b/PersonalFinanceAccounting.GuiApp/MainWindow.xaml
@@ -22,27 +22,27 @@
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="{Binding TopPanelHeight}"/>
+            <RowDefinition Height="{Binding TopPanel.Height}"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
         <StackPanel Grid.Row="0" HorizontalAlignment="Center">
             <StackPanel Orientation="Horizontal">
-                <Button Content="Добавить кошелёк" Margin="6,3,3,0" Command="{Binding CommandOpenCloseCreateWallet}" Cursor="Hand"/>
-                <Button Content="Добавить категорию доходов" Margin="3,3,3,0" Command="{Binding CommandOpenCloseCreateIncomeCategory}" Cursor="Hand"/>
-                <Button Content="Добавить категорию расходов" Margin="3,3,6,0" Command="{Binding CommandOpenCloseCreateExpenseCategory}" Cursor="Hand"/>
+                <Button Content="Добавить кошелёк" Margin="6,3,3,0" Command="{Binding TopPanel.CommandOpenCloseCreateWallet}" Cursor="Hand"/>
+                <Button Content="Добавить категорию доходов" Margin="3,3,3,0" Command="{Binding TopPanel.CommandOpenCloseCreateIncomeCategory}" Cursor="Hand"/>
+                <Button Content="Добавить категорию расходов" Margin="3,3,6,0" Command="{Binding TopPanel.CommandOpenCloseCreateExpenseCategory}" Cursor="Hand"/>
             </StackPanel>
 
-            <StackPanel Visibility="{Binding CreateWallet.IsVisible}" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,0">
-                <TextBox Text="{Binding CreateWallet.Name, UpdateSourceTrigger=PropertyChanged}" Width="200" Margin="0,0,10,0"
+            <StackPanel Visibility="{Binding TopPanel.CreateWallet.IsVisible}" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,0">
+                <TextBox Text="{Binding TopPanel.CreateWallet.Name, UpdateSourceTrigger=PropertyChanged}" Width="200" Margin="0,0,10,0"
                     materialDesign:HintAssist.Hint="Название кошелька"
                     materialDesign:HintAssist.IsFloating="True"
                     materialDesign:TextFieldAssist.HasClearButton="True"/>
-                <TextBox Text="{Binding CreateWallet.Sum, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" Width="200" Margin="0,0,10,0"
+                <TextBox Text="{Binding TopPanel.CreateWallet.Sum, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" Width="200" Margin="0,0,10,0"
                     materialDesign:HintAssist.Hint="Начальная сумма"
                     materialDesign:HintAssist.IsFloating="True"
                     materialDesign:TextFieldAssist.HasClearButton="True"/>
-                <ComboBox ItemsSource="{Binding CreateWallet.Currencies}" SelectedItem="{Binding CreateWallet.SelectedCurrency}"
+                <ComboBox ItemsSource="{Binding TopPanel.CreateWallet.Currencies}" SelectedItem="{Binding TopPanel.CreateWallet.SelectedCurrency}"
                           materialDesign:HintAssist.Hint="Валюта"
                           materialDesign:HintAssist.IsFloating="True"
                           Width="80" Margin="0,0,10,0">
@@ -52,24 +52,61 @@
                         </DataTemplate>
                     </ComboBox.ItemTemplate>
                 </ComboBox>
-                <Button Content="Добавить" Command="{Binding CommandCreateWallet}" Cursor="Hand"/>
+                <Button Content="Добавить" Command="{Binding TopPanel.CommandCreateWallet}" Cursor="Hand"/>
             </StackPanel>
 
-            <StackPanel Visibility="{Binding CreateIncomeCategory.IsVisible}" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,0">
-                <TextBox Text="{Binding CreateIncomeCategory.Name, UpdateSourceTrigger=PropertyChanged}" Width="200" Margin="0,0,10,0"
+            <StackPanel Visibility="{Binding TopPanel.CreateIncomeCategory.IsVisible}" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,0">
+                <TextBox Text="{Binding TopPanel.CreateIncomeCategory.Name, UpdateSourceTrigger=PropertyChanged}" Width="200" Margin="0,0,10,0"
                     materialDesign:HintAssist.Hint="Название категории дохода"
                     materialDesign:HintAssist.IsFloating="True"
                     materialDesign:TextFieldAssist.HasClearButton="True"/>
-                <Button Content="Добавить" Command="{Binding CommandCreateIncomeCategory}" Cursor="Hand"/>
+                <Button Content="Добавить" Command="{Binding TopPanel.CommandCreateIncomeCategory}" Cursor="Hand"/>
             </StackPanel>
 
-            <StackPanel Visibility="{Binding CreateExpenseCategory.IsVisible}" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,0">
-                <TextBox Text="{Binding CreateExpenseCategory.Name, UpdateSourceTrigger=PropertyChanged}" Width="200" Margin="0,0,10,0"
+            <StackPanel Visibility="{Binding TopPanel.CreateExpenseCategory.IsVisible}" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,0">
+                <TextBox Text="{Binding TopPanel.CreateExpenseCategory.Name, UpdateSourceTrigger=PropertyChanged}" Width="200" Margin="0,0,10,0"
                     materialDesign:HintAssist.Hint="Название категории расхода"
                     materialDesign:HintAssist.IsFloating="True"
                     materialDesign:TextFieldAssist.HasClearButton="True"/>
-                <Button Content="Добавить" Command="{Binding CommandCreateExpenseCategory}" Cursor="Hand"/>
+                <Button Content="Добавить" Command="{Binding TopPanel.CommandCreateExpenseCategory}" Cursor="Hand"/>
             </StackPanel>
         </StackPanel>
+
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="235"/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+
+            <ScrollViewer Grid.Column="0">
+                <ListBox ItemsSource="{Binding Wallets}">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <Border  Height="144" Width="200" BorderBrush="#FF673AB7" BorderThickness="1">
+                                <Border.Background>
+                                    <ImageBrush ImageSource="/cat.jpg"/>
+                                </Border.Background>
+                                <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+                                    <TextBlock Text="{Binding Name}" Foreground="White" FontSize="20" HorizontalAlignment="Center" >
+                                        <TextBlock.Effect>
+                                            <DropShadowEffect Color="#FF673AB7" Direction="-30" BlurRadius="-3" ShadowDepth="2" />
+                                        </TextBlock.Effect>
+                                    </TextBlock>
+                                    <TextBlock Text="{Binding Balance}" Foreground="White" FontSize="25">
+                                        <TextBlock.Effect>
+                                            <DropShadowEffect Color="#FF673AB7" Direction="-30" BlurRadius="-3" ShadowDepth="2" />
+                                        </TextBlock.Effect>
+                                    </TextBlock>
+                                </StackPanel>
+                            </Border>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+            </ScrollViewer>
+
+            
+
+        </Grid>
     </Grid>
 </Window>
